[metadata]
name = madi
version = 0.0.1
author = John Sipple
author_email = sipple@google.com
url = https://github.com/google/madi
license = Apache-2.0
license_file = LICENSE
description = Multivariate Anomaly Detection with Interpretability (MADI)
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
package_dir =
  =src
python_requires = >=3.6.*
include_package_data = True
install_requires =
    setuptools >= 40.2.0
    importlib_resources ; python_version<'3.7'
    numpy>=1.16.0
    scikit-learn>=0.21.3
    scipy>=1.2.1
    tensorflow>=2.3.0rc0
    tensorflow-datasets>=3.1.0
    typing_extensions ; python_version<'3.8'
    pandas>=0.24.2

[options.packages.find]
where = src
